[package]
name = "merkle-tree-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0.24"
ethers = { git = "https://github.com/gakonst/ethers-rs" }